# Jarvis

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  TODO.md  config.example.yaml  docker-compose.yml  install.py  installer_gui.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_jarvis.py
.github/workflows/: ci.yml
ai_assistant_pro/: __init__.py  cli.py
ai_assistant_pro/engine/: __init__.py  cache.py  model.py  scheduler.py
ai_assistant_pro/jarvis/: __init__.py  core.py  daemon.py  memory.py  rag.py  tools.py  voice.py  web_ui.py
ai_assistant_pro/kernels/: __init__.py  attention.py  fused_ops.py  quantization.py
ai_assistant_pro/serving/: __init__.py  server.py
ai_assistant_pro/srf/: __init__.py  components.py  core.py  integration.py  kernels.py
ai_assistant_pro/utils/: __init__.py  config.py  logging.py
ai_assistant_pro/visualization/: __init__.py  srf_viz.py
benchmarks/: __init__.py  benchmark.py  srf_benchmark.py
docs/: ARCHITECTURE.md  JARVIS_GUIDE.md  QUICKSTART.md  SRF_GUIDE.md
examples/: README.md  advanced_usage.py  api_server.py  basic_usage.py  jarvis_examples.py  srf_advanced.py  srf_basic.py
tests/: __init__.py  test_cache_scheduler.py  test_cli.py  test_config_utils.py  test_engine_stubs.py  test_jarvis_stubs.py  test_kernels.py  test_serving_stub.py  test_srf.py  test_srf_components_cpu.py
