[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assistant-pro"
version = "0.1.0"
description = "High-performance AI assistant framework optimized for NVIDIA Blackwell (SM120)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AI Assistant Pro Team"}
]
keywords = ["pytorch", "triton", "llm", "inference", "sm120", "blackwell", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.5.0",
    "triton>=3.0.0",
    "transformers>=4.40.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "flake8>=6.1.0",
]
benchmarks = [
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "seaborn>=0.13.0",
]
all = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "isort>=5.13.0",
    "flake8>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/ai-assistant-pro/ai-assistant-pro"
Documentation = "https://ai-assistant-pro.readthedocs.io"
Repository = "https://github.com/ai-assistant-pro/ai-assistant-pro"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_assistant_pro*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["ai_assistant_pro", "tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
