[metadata]
name = ai-assistant-pro
version = 0.1.0
author = AI Assistant Pro Team
description = High-performance AI assistant framework optimized for NVIDIA Blackwell (SM120)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ai-assistant-pro/ai-assistant-pro
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.10
install_requires =
    torch>=2.5.0
    triton>=3.0.0
    transformers>=4.40.0
    fastapi>=0.110.0
    uvicorn>=0.28.0
    numpy>=1.26.0
    pydantic>=2.6.0
    rich>=13.7.0
    tqdm>=4.66.0
    click>=8.1.0
    pyyaml>=6.0.0

[options.extras_require]
dev =
    pytest>=8.0.0
    pytest-cov>=4.1.0
    pytest-benchmark>=4.0.0
    black>=24.0.0
    ruff>=0.3.0
    mypy>=1.8.0
viz =
    matplotlib>=3.8.0
    seaborn>=0.13.0
all =
    matplotlib>=3.8.0
    seaborn>=0.13.0
    pytest>=8.0.0
    pytest-cov>=4.1.0
    black>=24.0.0
    ruff>=0.3.0

[options.entry_points]
console_scripts =
    ai-assistant-pro = ai_assistant_pro.cli:cli

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --cov=ai_assistant_pro --cov-report=term-missing

[coverage:run]
source = ai_assistant_pro
omit =
    */tests/*
    */benchmarks/*

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

[flake8]
max-line-length = 100
extend-ignore = E203, E266, E501, W503
exclude = .git,__pycache__,build,dist
